messaging_app/blue_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-blue
spec:
  replicas: 1
  selector:
    matchLabels:
      app: django-blue
  template:
    metadata:
      labels:
        app: django-blue
    spec:
      containers:
        - name: django-container
          image: your-dockerhub-username/django-messaging:1.0
          ports:
            - containerPort: 8000
